<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainMenu!</string>
    <string name="app_name">GeoBloc-ULL</string>
	<string name="ButtonMainMenu1">Generar Formulario</string>
	<string name="menu_send_form">Enviar</string>
	
	<string name="list_form">Formularios</string>
	<string name="uncreated_dir">No se pudo crear el directorio %s</string>
	<string name="ButtonMainMenu2">Rellenar nuevo formulario</string>
	<string name="created_dir">Directorio %s creado correctamente</string>
	<string name="TextView01">Formulario %s cargado</string>
	
	<!-- Mensajes genéricos -->
	<string name="debugging">Depuración</string>
	<string name="ready">Listo</string>
	<string name="checkingForConnectivity">Comprobando la conexión a Internet...</string>
	<string name="noConnectivity">No disponible conexión a Internet.</string>
	<string name="connectivityAvailable">Conexión a Internet disponible.</string>
	<string name="noElementsSelected">No hay elementos seleccionados.</string>
	
	<string name="taskComplete">Tarea completada.</string>
	<string name="download">Descargar</string>
	<string name="downloading">Descargando...</string>
	<string name="working">Trabajando...</string>
	<string name="delete">Borrar</string>
	<string name="update">Actualizar</string>
	<string name="report">Informe</string>
	
	<!-- Nombres de botones de la Actividad Menú Principal -->
	<string name="staticFormSelectionSpinnerText">Seleccione Formulario:</string>
	<string name="staticFormStartButtonText">Test Formulario Estático</string>
	<string name="menu_question_view_save">Guardar</string>
	<string name="menu_question_view_save_and_send">Guardar y Enviar</string>
	<string name="selected_file">Ha seleccionado el archivo %s</string>
	<string name="parsed_file_ok">Parseado correcto del fichero %s</string>
	<string name="formsDownloaderButtonText">Descarga de Formularios</string>
	<string name="formsSenderButtonText">Envío de formularios</string>
	
	<!-- SharedPreferences -->
	<string name="sharedPreferencesTitle">Preferencias</string>
	<string name="sharedInternetPreferencesTitle">Preferencias de internet</string>
	<string name="sharedPersistancePreferencesTitle">Preferencias de persistencia</string>
	<string name="sharedAdvancedPreferencesTitle">Preferencias avanzadas (sólo usuarios expertos)</string>
	<string name="baseServerAddress">Dirección base</string>
	<string name="baseServerAddressDescription">Dirección base donde se encuentran los servicios en Internet</string>
	<string name="uploadPackagesServletAdress">Servlet Paquetes</string>
	<string name="uploadPackagesServletAddressDescription">Dirección del servlet para subir paquetes</string>
	<string name="getAvailableFormsListFromServletAddress">Servlet lista de formularios</string>
	<string name="getAvailableFormsListFromServletAddressDescription">Dirección del servlet que permite obtener la lista de formularios.</string>
	<string name="downloadFormsServletAddress">Servlet de formularios</string>
	<string name="downloadFormsServletAddressDescription">Dirección del servlet para descargar paquetes</string>
	<string name="numberOfInternetAttempts">Intentos de conexión</string>
	<string name="numberOfInternetAttemptsDescription">Nº de veces que se intentarán las operaciones de Internet</string>
	<string name="dateOfLastServerFormsListQuery">Fecha de última actualización de formularios</string>
	<string name="packagesPath">Directorio de paquetes</string>
	<string name="packagesPathDescription">Dirección de almacenamiento SD donde se guardarán los paquetes</string>
	<string name="formsPath">Directorio de formularios</string>
	<string name="formsPathDescription">Dirección de almacenamiento SD donde se guardarán los formularios</string>
	<string name="dropLocalFormsTable">Borrar tabla de formularios locales</string>
	<string name="dropLocalFormsTableDescription">Borra todos los registros de formularios, y borra también todos los formularios guardados. No afecta a las instancias guardadas,</string>
	<string name="enableUserDebuggingFeatures">Depuración a nivel de usuario</string>
	<string name="enableUserDebuggingFeaturesDescription">Permite ver opciones deshabilitadas por defecto</string>
	
	<string name="formPreferencesTitle">Preferencias del Formulario</string>
	<string name="formColorThemeDescription">Temas de color de los formularios por defecto</string>
	<string name="formColorTheme">Tema del formulario</string>
	<string name="formColorTextDescription">Color del texto del formulario por defecto</string>
	<string name="formColorText">Color del Texto</string>
	<string name="formPhotoSizeTitle">Tamaño de foto grande</string> 
	<string name="formPhotoSizeDescription">Establece el tamaño de las fotos de los formularios al mayor</string> 

	<string name="animationsCategory">Preferencias de Animaciones</string>
	<string name="slidingButtonsAnimation">Botones Deslizantes</string>
	<string name="slidingButtonsAnimationDescription">Los botones sólo aparecerán cuando se pueda realizar una acción con ellos.</string>
	
	<!-- FormPages -->
	<string name="button_back">Atrás</string>
	<string name="button_next">Adelante</string>
	
	<!-- FormsManager Layout and List Items -->
	<string name="formsManager_downloadTitle">Descarga de Formularios</string>
	<string name="formsManager_downlaodLastListDate">Fecha de última lista: </string>
	<string name="formsManager_donwloadingServerList">Descargando lista del servidor...</string>
	<string name="formsManager_processingServerList">Procesando datos del servidor...</string>
	<string name="formsManager_errorProcessingServerList">Ocurrió un error procesando los datos del servidor.</string>
	<string name="formsManager_errosEncounteredDuringDownload">Se produjeron errores durante la operación.</string>
	<string name="formsManager_itemDownloadedSuccesfully">fue descargado correctamente.</string>
	<string name="formsManager_itemEncounteredErrors">no pudo ser descargado.</string>
	<string name="formsManager_list_item_FormVersionTextViewText">Versión: </string>
	<string name="formsManager_list_itemFormStatusTextViewText">Estado: </string>
	<string name="formsManager_list_itemFormStatusUpdate">Actualización Disp.</string>
	<string name="formsManager_list_itemFormStatusNew">Nuevo </string>
	<string name="formsManager_list_itemFormStatusCurrent">Más reciente</string>
	<string name="formsManager_list_itemFormStatusNotFound">No encontrado</string>
	
	<string name="formsManager_deleteTitle">Borrado de Formularios</string>
	
	<!-- FormsDownloader Layout -->
	<string name="forms_downloaderTextViewText">Lista de formularios disponibles</string>
	<string name="forms_downloaderActionDLButtonText">Descargar</string>
	<string name="forms_downloaderActionERButtonText">Eliminar</string>
	<string name="forms_downloaderEraseModeButtonTextOn">Modo Borrar</string>
	<string name="forms_downloaderEraseModeButtonTextOff">Modo Borrar</string>
	<string name="forms_downloader_list_item_FormVersionTextViewText">Versión: </string>
	<string name="forms_downloader_list_itemFormStatusTextViewText">Estado: </string>
	<string name="forms_downloader_list_itemFormStatusUpdate">Actualización Disp.</string>
	<string name="forms_downloader_list_itemFormStatusNew">Nuevo </string>
	<string name="forms_downloader_list_itemFormStatusCurrent">Más reciente</string>
	
		<!-- InstanceManager Layout and List Items -->
	<string name="instance_manager_allInstancesLabel">Todas las instancias</string>
	<string name="instance_manager_completeInstancesLabel">Instancias completas</string>
	<string name="instance_manager_allInstancesEraseButton">Borrar</string>
	<string name="instance_manager_completeInstancesSendButton">Enviar</string>
	<string name="instance_manager_completeInstancesMarkIncomplete">Marcar Incompleto</string>
	<string name="instance_manager_list_itemFormInstanceCreatedDateText">Creado: </string>
	<string name="instance_manager_list_itemFormInstanceCompletedDateText">Completado: </string>
	<string name="instance_manager_list_itemFormInstanceCompletedTextViewText">Completado: </string>
	<string name="instance_manager_list_itemFormInstanceCompleteYes">Si</string>
	<string name="instance_manager_list_itemFormInstanceCompleteNo">No</string>
	
	<!-- Subtítulos de las páginas -->
	<string name="new_form">Nuevo Formulario</string> <!-- Lista de Esquemas de Formularios -->
	<string name="list_local_instances">Recuperar Formulario</string>
	
	<!-- Títulos de la página de inicio-->
	<string name="cover_title">GeoBloc</string>
	<string name="cover_subtile_2">Gerencia de Urbanismo de La Laguna</string>
	
	<!-- Página de formularios -->
	<string name="no_more_pages_at_left">No existen más páginas del formulario a la izquierda</string>
	<string name="no_more_pages_at_rigth">No existen más páginas del formulario a la derecha</string>
	<string name="help_form_mov">Mueva su dedo horizontalmente en la pantalla para desplazarse por el formulario</string>
	<string name="form_loaded">Formulario del tipo %s cargado</string>
	<string name="form_version">Version %s</string>

	<string name="load_photo">Se ha cargado %s foto</string>
	<string name="load_photos">Se han cargado %s fotos</string>
	<string name="no_load_photos">No se han cargado fotos</string>
	
	<!-- Location Page -->
	<string name="not_position">El GPS no ha encontrado ninguna ubicación</string>
	<string name="searching_position">Buscando nueva ubicación GPS</string>
	<string name="find_position">Posición: %s - %s</string>
	<string name="activateGPS">Debe activar GPS en los ajustes del teléfono</string>

	<string name="version">0.1</string>

    <string name="planet_prompt">Choose a planet</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
