<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/sharedPreferencesTitle">
  <PreferenceCategory
  	android:title="@string/sharedInternetPreferencesTitle">
  	<EditTextPreference
  		android:key="uploadPackagesServletAddress"
  		android:name="uploadServerAddress"
  		android:title="@string/uploadPackagesServletAdress"
  		android:summary="@string/uploadPackagesServletAddressDescription">
  	</EditTextPreference>
  </PreferenceCategory>
  <PreferenceCategory
  	android:title="@string/sharedPersistancePreferencesTitle">
  	<EditTextPreference
  		android:key="formsPath"
  		android:name="formsSD_DirectoryPath"
  		android:title="@string/formsPath"
  		android:summary="@string/formsPathDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="packagesPath"
  		android:name="packagesSD_DirectoryPath"
  		android:title="@string/packagesPath"
  		android:summary="@string/packagesPathDescription">
  	</EditTextPreference>
  </PreferenceCategory>
  
  	
  
</PreferenceScreen>
