<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#83216A">
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center_horizontal" 
    	android:layout_marginBottom="20px" 
    	android:layout_marginTop="20px" 
    	android:textSize="20px" 
    	android:id="@+id/ProgramName"
    	/>
	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:id="@+id/ButtonMainMenu1" 
		android:text="@string/ButtonMainMenu1"
		android:padding="30dp">
	</Button>
	<Button 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/ButtonMainMenu2"
		android:padding="30dp">
	</Button>
	<Button
		android:id="@+id/formsDownloaderButton"
		android:text="@string/formsDownloaderButtonText"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:padding="30dp"
		android:onClick="formsDownloaderButtonOnClickHandler">
	</Button>
	<Button
		android:id="@+id/formsSenderButton"
		android:text="@string/formsSenderButtonText"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:padding="30dp"
		android:onClick="formsSenderButtonOnClickHandler">
	</Button>
	<!-- 
	<Spinner
		android:id="@+id/staticFormSelectionSpinner"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:prompt="@string/staticFormSelectionSpinnerText"/>
	-->
	<Button
		android:id="@+id/staticFormStartButton"
		android:text="@string/staticFormStartButtonText"
		android:onClick="staticFormStartButtonOnClickHandler"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:visibility="invisible">
	</Button>
</LinearLayout>

