<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/myInstancesViewFlipper"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
  	<!-- Left page, the one with incomplete instances -->
	<RelativeLayout
		android:id="@+id/allInstancesLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView
			android:id="@+id/allInstancesTextView1"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/instance_manager_allInstancesLabel"
  			android:textColor="@color/White"
  			android:background="@color/ULLPurple"
  			android:layout_alignParentTop="true"
  			android:layout_alignParentLeft="true">
  		</TextView>
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/instance_manager_completeInstancesLabel"
  			android:textColor="@color/Unselected"
  			android:background="@color/ULLPurple"
  			android:layout_alignParentTop="true"
  			android:layout_alignParentRight="true">
  		</TextView>
  		<RelativeLayout
  			android:id="@+id/allInstancesBottomButtons"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_alignParentBottom="true">
  			<Button
  				android:id="@+id/allInstancesEraseButton"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:text="@string/instance_manager_allInstancesEraseButton"
  				android:onClick="allInstancesButtonOnClick">
  			</Button>
  		</RelativeLayout>
  		
  		<ListView
  			android:id="@+id/allInstancesListView"
  			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_below="@id/allInstancesTextView1"
  			android:layout_above="@id/allInstancesBottomButtons">
  		</ListView>
  		
	</RelativeLayout>
	
	<!-- Right page, the one with complete instances, ready to be sent -->
	<RelativeLayout
  		android:id="@+id/completeInstancesLayout"
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent">
  		<TextView
  			android:id="@+id/allInstancesTextView2"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/instance_manager_allInstancesLabel"
  			android:textColor="@color/Unselected"
  			android:background="@color/ULLPurple"
  			android:layout_alignParentTop="true"
  			android:layout_alignParentLeft="true">
  		</TextView>
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/instance_manager_completeInstancesLabel"
  			android:textColor="@color/White"
  			android:background="@color/ULLPurple"
  			android:layout_alignParentTop="true"
  			android:layout_alignParentRight="true">
  		</TextView>
  		<RelativeLayout
  			android:id="@+id/completeInstancesBottomButtons"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_alignParentBottom="true">
  			<TextView
  				android:id="@+id/buttonSetCenterStub"
  				android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:layout_centerHorizontal="true"
  				android:visibility="invisible">
  			</TextView>
  			<Button
  				android:id="@+id/completeInstancesSendButton"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:layout_alignParentLeft="true"
  				android:layout_toLeftOf="@id/buttonSetCenterStub"
  				android:text="@string/instance_manager_completeInstancesSendButton"
	  			android:onClick="allInstancesButtonOnClick">
  			</Button>
  			<Button
  				android:id="@+id/completeInstancesMarkIncompleteButton"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:layout_toRightOf="@id/buttonSetCenterStub"
  				android:layout_alignParentRight="true"
  				android:text="@string/instance_manager_completeInstancesMarkIncomplete"
	  			android:onClick="allInstancesButtonOnClick">
  			</Button>

  		</RelativeLayout>
  		
  		<ListView
  			android:id="@+id/completeInstancesListView"
  			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_below="@id/allInstancesTextView2"
  			android:layout_above="@id/completeInstancesBottomButtons">
  		</ListView>  		
  	</RelativeLayout>  	
</ViewFlipper>
